[tool.poetry]
name = "graph-async"
version = "0.1.0"
description = ""
authors = ["nickchecan <nicholas.checan@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
langgraph = "^0.2.72"
grandalf = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
